tests/paczka1/fuzzy1/30108713.err
Error in line 2: 63gfwcKIsO A947 29,9
Error in line 14: cijk A833 30,6
Error in line 24: DfOcUy A647 85,23
Error in line 25: cijk A947 -3,5
Error in line 21: DfOcUy A947 48,3
Error in line 34: A647 A947 43,1
Error in line 38: A647 S752 40,7
